# cppgo-linkage

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  build_cpp.sh  get_libgo.cpp
cpp/libgo/: build_lib.sh  go.mod  libgo.go
go/: go.mod  main.go
go/lib/: CMakeLists.txt  build_cpp_lib.sh  simple_lib.cpp  simple_lib.h
